# tg_miniapp_template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf
backend/aiogram_miniapp/: Dockerfile  entrypoint.sh  pyproject.toml
backend/aiogram_miniapp/aiogram_miniapp/: main.py
backend/django_miniapp/: .gitignore  entrypoint.sh  manage.py  requirements.txt
backend/django_miniapp/configs/: gunicorn.conf.py
backend/django_miniapp/tg_miniapp/: asgi.py  urls.py  wsgi.py
backend/django_miniapp/tg_miniapp/settings/: __init__.py  base.py  development.py  production.py
backend/django_miniapp/users_app/: apps.py  authentication.py  managers.py  models.py  pagination.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/django_miniapp/users_app/services/: authentication.py  miscellaneous.py  permissions.py  user_creation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  axios.js  main.js
frontend/src/assets/: main.scss
frontend/src/components/: RequirementsMessage.vue  TGNavbar.vue
frontend/src/components/icons/: LogoIcon.vue
frontend/src/constants/: ada-api.js  permissions.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/store/modules/: auth.js
frontend/src/views/: Home.vue  Profile.vue
