[tool.poetry]
name = "aiogram-miniapp"
version = "0.1.0"
description = ""
authors = ["a.pykharev <a.pykharev@bars.group>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10.0"
typer = "^0.12.3"
environs = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
